# codebuff-community

./: .gitignore  .gitmodules  README.md
codebuff-docker/: knowledge.md
knowledge/: react-optimization.knowledge.md
showcase/: LICENSE  README.md
showcase/code-analysis/: .gitignore  README.md  knowledge.md  pyproject.toml
showcase/code-analysis/app/: __init__.py  main.py
showcase/code-analysis/cli/: __init__.py  __main__.py  git_analysis.py
showcase/code-analysis/extension/: background.js  content.js  manifest.json  popup.html  popup.js
showcase/fishies/: .gitignore  knowledge.md  package.json
showcase/minecraft-complex/: package-lock.json  package.json
showcase/minecraft-simple/: .eslintrc.json  README.md  index.html  knowledge.md  package-lock.json  package.json  script.js  styles.css
showcase/vending-machine/: package-lock.json
starter-templates/: LICENSE  README.md
starter-templates/chrome-extension/: .eslintrc.json  README.md  knowledge.md  package-lock.json  package.json  vite.config.ts
starter-templates/convex/: README.md  convex.knowledge.md  knowledge.md
starter-templates/nextjs/: README.md
starter-templates/node-cli/: README.md  knowledge.md  package-lock.json  package.json  tsconfig.json
starter-templates/python-cli/: README.md  knowledge.md  pyproject.toml
starter-templates/remix/: README.md  knowledge.md  package-lock.json  package.json
starter-templates/vite/: package-lock.json
utils/codebuff-docker/: Dockerfile  README.md  entrypoint.sh  start-codebuff.sh
utils/docker/: Dockerfile  README.md  codebuff-wrapper.sh  (+4 more)
(+36 files in other folders)
